    - Upgraded windres.exe to 2.36.1.
    - Used short pathname to spawn subprocesses of mcpp.exe and windres.exe.
- v.5.5.4 (2021.04.13)
    - Fix importing Vista icons.
- v.5.5.5 (2021.04.23)
    - Deleted tlb2idl programs.
    - Added OleBow program to process TYPELIB resource type.
    - Compiling TYPELIB if MIDL compiler is available.
- v.5.5.6 (2021.04.29)
    - Made *.rc files importable.
    - Fixed TreeView languages arrow display.
- v.5.5.7 (2021.06.12)
    - Added line numbers.
- v.5.5.8 (2021.06.15)
    - Marks line upon happening error.
    - Fixed Ctrl+A.
    - Updated mcpp.exe and dfmsc.exe.
- v.5.5.9 (2021.06.16)
    - Fixed loading resource.h macros.
- v.5.6.0 (2021.06.19)
    - Don't compress dfmsc.exe (for security).
    - Supported command line.
    - Added RES_load and RES_save functions to EGA language.
- v.5.6.1 (2021.07.01)
    - Fixed the return value of process.
    - Improved message table handling.
    - Don't change the case of name when renaming it in TreeView.
- v.5.6.2 (2021.08.15)
    - Enlarged width of "Save Options" and "Export Options" dialogs.
    - Added workaround to add message tables on Microsoft compatible mode.
- v.5.6.3 (2021.12.12)
    - Added win32-samples.
    - Added "UI Lanuage Select".
- v.5.6.4 (2021.12.16)
    - Asking for compiling before opening GUI edit.
- v.5.6.5 (2021.12.18)
    - A BS_OWNERDRAW button is a PUSHBUTTON.
    - Added "Copy to multiple languages" feature.
    - Fixed the bug of the RAD window (Critical).
- v.5.6.6 (2021.12.25)
    - Double-clicking the RAD window opens the control/dialog properties.
    - Improved ANI cursor support.
- v.5.6.7 (2022.01.13)
    - Added Portuguese translation.
    - WinXP support again (don't use GetThreadUILanguage() in XP).
- v.5.6.8 (2022.01.17)
    - Changed the initial focus of IDD_CTRLPROP.
    - Fixed some version info.
- v.5.6.9 (2022.XX.YY)
    - Splited the history text.
    - Disabled mouse cursor clipping on resizing controls.
    - Renamed READMEs.