@@ -265,3 +265,5 @@
     - Splited the history text.
     - Disabled mouse cursor clipping on resizing controls.
     - Renamed READMEs.
+    - Added WS_CLIPCHILDREN for RAD window to reduce flickering.
+    - Reverted RAD window behaviour.
