@@ -608,3 +608,5 @@
         ヒストリーテキストを分離。
         コントロールのサイズ変更時にマウスカーソルクリッピングを無効化。
         READMEファイルを改名。
+        ちらつきを減らすためにRADウィンドウにWS_CLIPCHILDRENを追加。
+        RADウィンドウのふるまいを元に戻す。
