@@ -63,14 +63,12 @@ public:
         m_hwndTarget = hwndTarget;
 
         // create as a child
-        DWORD style = WS_THICKFRAME | WS_CHILD;
-        DWORD exstyle = WS_EX_TOOLWINDOW | WS_EX_TRANSPARENT | WS_EX_TOPMOST;
-        BOOL bOK = CreateWindowDx(hwndParent, NULL, style, exstyle, x, y, cx, cy);
+        DWORD style = (bVisible ? WS_VISIBLE : 0) | WS_CHILD | WS_THICKFRAME;
+        DWORD exstyle = WS_EX_TOOLWINDOW | WS_EX_TOPMOST;
+        BOOL bOK = CreateAsChildDx(hwndParent, NULL, style, exstyle, -1, 
+                                   x, y, cx, cy);
         if (bOK)
         {
-            if (bVisible)
-                ShowWindow(m_hwnd, SW_SHOWNOACTIVATE);
-
             // fit to the target
             FitToTarget();
 
@@ -94,28 +92,6 @@ public:
         delete this;
     }
 
-    void OnGetMinMaxInfo(HWND hwnd, LPMINMAXINFO lpMinMaxInfo)
-    {
-        lpMinMaxInfo->ptMinTrackSize.x = m_nGripSize;
-        lpMinMaxInfo->ptMinTrackSize.y = m_nGripSize;
-    }
-
-    BOOL m_bLockMoveSize = FALSE;
-
-    void OnSysCommand(HWND hwnd, UINT cmd, int x, int y)
-    {
-        if (cmd == SC_CLOSE)
-            return;
-        ++m_bLockMoveSize;
-        // Disable mouse cursor clipping.
-        ModifyStyleDx(WS_CHILD, 0);
-        FORWARD_WM_SYSCOMMAND(hwnd, cmd, x, y, DefaultProcDx);
-        ModifyStyleDx(0, WS_CHILD);
-        ClipCursor(NULL);
-        --m_bLockMoveSize;
-        PostMessage(hwnd, WM_SIZE, 0, 0);
-    }
-
     // the window procedure of MRubberBand
     virtual LRESULT CALLBACK
     WindowProcDx(HWND hwnd, UINT uMsg, WPARAM wParam, LPARAM lParam)
@@ -130,15 +106,6 @@ public:
             HANDLE_MSG(hwnd, WM_DESTROY, OnDestroy);
             HANDLE_MSG(hwnd, WM_NCHITTEST, OnNCHitTest);
             HANDLE_MSG(hwnd, WM_SETCURSOR, OnSetCursor);
-            HANDLE_MSG(hwnd, WM_GETMINMAXINFO, OnGetMinMaxInfo);
-            HANDLE_MSG(hwnd, WM_SYSCOMMAND, OnSysCommand);
-        case WM_ENTERSIZEMOVE:
-            // Disable mouse cursor clipping.
-            ClipCursor(NULL);
-            return 0;
-        case WM_EXITSIZEMOVE:
-            PostMessage(hwnd, WM_SIZE, 0, 0);
-            return 0;
         default:
             return DefaultProcDx(hwnd, uMsg, wParam, lParam);
         }
@@ -157,9 +124,6 @@ public:
         if (m_hwndTarget == NULL)
             return;     // no target
 
-        if (m_bLockMoveSize)
-            ModifyStyleDx(0, WS_CHILD); // add WS_CHILD
-
         // get the ideal rectangle in the parent coordinates
         RECT rc;
         GetIdealClientRect(&rc);
@@ -168,13 +132,10 @@ public:
         // move it
         SetWindowPos(m_hwndTarget, NULL, 
             rc.left, rc.top, rc.right - rc.left, rc.bottom - rc.top, 
-            SWP_NOACTIVATE | SWP_NOZORDER);
-
-        if (m_bLockMoveSize)
-            ModifyStyleDx(WS_CHILD, 0); // remove WS_CHILD for mouse cursor clipping
+            SWP_NOACTIVATE | SWP_NOZORDER | SWP_NOCOPYBITS);
 
         // redraw
-        InvalidateRect(m_hwnd, NULL, FALSE);
+        InvalidateRect(m_hwnd, NULL, TRUE);
     }
 
     // adjust the rubber band's posision and size for the target
@@ -194,7 +155,7 @@ public:
         // move it
         SetWindowPos(m_hwnd, NULL, 
             rc.left, rc.top, rc.right - rc.left, rc.bottom - rc.top, 
-            SWP_NOACTIVATE | SWP_NOZORDER);
+            SWP_NOACTIVATE | SWP_NOZORDER | SWP_NOCOPYBITS);
 
         // redraw
         InvalidateRect(m_hwnd, NULL, TRUE);
@@ -422,7 +383,7 @@ public:
     UINT OnNCCalcSize(HWND hwnd, BOOL fCalcValidRects, NCCALCSIZE_PARAMS *lpcsp)
     {
         // no non-client area
-        return 0;
+        return WVR_VALIDRECTS | WVR_REDRAW;
     }
 };
 
